style: fix dropdown transparent background in dark mode

--- a/src/css/colors.scss
+++ b/src/css/colors.scss
@@ -22,7 +22,7 @@
 
 html[data-theme="dark"] {
   --ifm-background-color: #000;
-  --ifm-background-surface-color: transparent;
+  --ifm-background-surface-color: #000;
   --ifm-font-color-base: #fff;
   --ifm-navbar-background-color: #000000;
   --ifm-heading-color: var(--ifm-color-primary);
